spectec/test/elab/neg/type-clause-tparam-mismatch.spectec
;; A def clause's type parameter list disagrees with its dec declaration.

dec $f<T> : nat
def $f<U, V> = 0
